feat: prevent splitting by named graph