@@ -1,14 +1,12 @@
 package be.vlaanderen.informatievlaanderen.ldes.ldi;
 
+import be.vlaanderen.informatievlaanderen.ldes.ldi.datasetsplitter.DatasetSplitter;
 import be.vlaanderen.informatievlaanderen.ldes.ldi.sparqlfunctions.*;
 import be.vlaanderen.informatievlaanderen.ldes.ldi.types.LdiOneToManyTransformer;
 import org.apache.jena.query.*;
 import org.apache.jena.rdf.model.Model;
-import org.apache.jena.rdf.model.Resource;
 import org.apache.jena.sparql.function.FunctionRegistry;
 
-import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.List;
 
 /**
@@ -18,17 +16,19 @@ public class SparqlConstructTransformer implements LdiOneToManyTransformer {
 
 	private final Query query;
 	private final boolean includeOriginal;
+	private final DatasetSplitter datasetSplitter;
 
-	public SparqlConstructTransformer(Query query, boolean includeOriginal) {
+	public SparqlConstructTransformer(Query query, boolean includeOriginal, DatasetSplitter datasetSplitter) {
 		this.query = query;
 		this.includeOriginal = includeOriginal;
+		this.datasetSplitter = datasetSplitter;
 		initGeoFunctions();
 	}
 
 	@Override
 	public List<Model> transform(Model linkedDataModel) {
 		final Dataset dataset = queryDataset(linkedDataModel);
-		final List<Model> result = extractModelsFromDataset(dataset);
+		final List<Model> result = datasetSplitter.split(dataset);
 		handleIncludeOriginal(result, linkedDataModel);
 		return result;
 	}
@@ -42,38 +42,8 @@ public class SparqlConstructTransformer implements LdiOneToManyTransformer {
 
 	private void handleIncludeOriginal(List<Model> result, Model linkedDataModel) {
 		if (includeOriginal && result.size() == 1) {
-			result.get(0).add(linkedDataModel);
+			result.getFirst().add(linkedDataModel);
 		}
-	}
-
-	private List<Model> extractModelsFromDataset(Dataset dataset) {
-
-		if (hasMultipleModels(dataset)) {
-			return splitDataset(dataset);
-		} else {
-			return List.of(dataset.getDefaultModel());
-		}
-
-	}
-
-	private boolean hasMultipleModels(Dataset dataset) {
-		return dataset.listNames().hasNext();
-	}
-
-	private List<Model> splitDataset(Dataset dataset) {
-		List<Model> result = new ArrayList<>();
-		Iterator<Resource> it = dataset.listModelNames();
-		while (it.hasNext()) {
-			Model namedModel = dataset.getNamedModel(it.next());
-			namedModel.add(dataset.getDefaultModel());
-			result.add(namedModel);
-		}
-
-		if (result.isEmpty()) {
-			result.add(dataset.getDefaultModel());
-		}
-
-		return result;
 	}
 
 	private void initGeoFunctions() {
